==> mbed-ce/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/spi_api.c <==
#include "hal/spi_api.h"
#include "object_owners.h"
#include "pinmap_ex.h"
#include "PeripheralPins.h"
#include "nrfx_spim.h"
#include "nrfx_spi.h"
#define DEBUG_PRINTF(...) printf(__VA_ARGS__)
#define DEBUG_PRINTF(...)

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    /* Get instance based on requested pins. */
    spi_inst->instance = pin_instance_spi(mosi, miso, sclk);
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    MBED_ASSERT(spi_inst->instance < NRFX_SPIM_ENABLED_COUNT);
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    MBED_ASSERT(spi_inst->instance < NRFX_SPI_ENABLED_COUNT);
#endif

    /* Store chip select separately for manual enabling. */
    spi_inst->cs = ssel;

    /* Store pins except chip select. */
    spi_inst->config.sck_pin        = sclk;
    spi_inst->config.mosi_pin       = mosi;
    spi_inst->config.miso_pin       = miso;
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    spi_inst->config.ss_pin         = NRFX_SPIM_PIN_NOT_USED;
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    spi_inst->config.ss_pin         = NRFX_SPI_PIN_NOT_USED;
#endif
    /* Use the default config. */
    spi_inst->config.irq_priority   = SPI_DEFAULT_CONFIG_IRQ_PRIORITY;
    spi_inst->config.orc            = SPI_FILL_CHAR;
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    spi_inst->config.frequency      = NRF_SPIM_FREQ_4M;
    spi_inst->config.mode           = NRF_SPIM_MODE_0;
    spi_inst->config.bit_order      = NRF_SPIM_BIT_ORDER_MSB_FIRST;
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    spi_inst->config.frequency      = NRF_SPI_FREQ_4M;
    spi_inst->config.mode           = NRF_SPI_MODE_0;
    spi_inst->config.bit_order      = NRF_SPI_BIT_ORDER_MSB_FIRST;
#endif


#if DEVICE_SPI_ASYNCH
    /* Set default values for asynchronous variables. */
    spi_inst->handler = 0;
    spi_inst->mask = 0;
    spi_inst->event = 0;
#endif

    /* Configure peripheral. This is called on each init to ensure all pins are set correctly
     * according to the SPI mode before calling CS for the first time.
     */
    spi_configure_driver_instance(obj);

    /* Configure GPIO pin if chip select has been set. */
    if (ssel != NC) {
        nrf_gpio_pin_set(ssel);
        nrf_gpio_cfg_output(ssel);
    }

    static bool first_init = true;

    if (first_init) {
        first_init = false;

        /* Register interrupt handlers in driver with the NVIC. */
        NVIC_SetVector(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn, (uint32_t) SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQHandler);
        NVIC_SetVector(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn, (uint32_t) SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQHandler);
        NVIC_SetVector(SPIM2_SPIS2_SPI2_IRQn, (uint32_t) SPIM2_SPIS2_SPI2_IRQHandler);
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
        NVIC_SetVector(SPIM3_IRQn, (uint32_t) SPIM3_IRQHandler);
#endif
    }
}

void spi_free(spi_t *obj)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int instance = spi_inst->instance;

    /* Use driver uninit to free instance. */
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    nrfx_spim_uninit(&nordic_nrf5_spim_instance[instance]);
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    nrfx_spi_uninit(&nordic_nrf5_spi_instance[instance]);
#endif

    /* Mark instance as uninitialized. */
    nordic_nrf5_spi_initialized[instance] = false;
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    /* SPI module only supports 8 bit transfers. */
    MBED_ASSERT(bits == 8);
    /* SPI module doesn't support Mbed HAL Slave API. */
    MBED_ASSERT(slave == 0);

#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    nrf_spim_mode_t new_mode = NRF_SPIM_MODE_0;

    /* Convert Mbed HAL mode to Nordic mode. */
    if (mode == 0) {
        new_mode = NRF_SPIM_MODE_0;
    } else if (mode == 1) {
        new_mode = NRF_SPIM_MODE_1;
    } else if (mode == 2) {
        new_mode = NRF_SPIM_MODE_2;
    } else if (mode == 3) {
        new_mode = NRF_SPIM_MODE_3;
    }
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    nrf_spi_mode_t new_mode = NRF_SPI_MODE_0;

    /* Convert Mbed HAL mode to Nordic mode. */
    if (mode == 0) {
        new_mode = NRF_SPI_MODE_0;
    } else if (mode == 1) {
        new_mode = NRF_SPI_MODE_1;
    } else if (mode == 2) {
        new_mode = NRF_SPI_MODE_2;
    } else if (mode == 3) {
        new_mode = NRF_SPI_MODE_3;
    }
#endif

    /* Check if configuration has changed. */
    if (spi_inst->config.mode != new_mode) {
        spi_inst->config.mode = new_mode;

        /* Set flag to force update. */
        spi_inst->update = true;
    }

    /* Configure peripheral if necessary. Must be called on each format to ensure the pins are set
     * correctly according to the SPI mode.
     */
    spi_configure_driver_instance(obj);
}

void spi_frequency(spi_t *obj, int hz)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    nrf_spim_frequency_t new_frequency = NRF_SPIM_FREQ_1M;

    /* Convert frequency to Nordic enum type. */
    if (hz < 250000) {
        new_frequency = NRF_SPIM_FREQ_125K;
    } else if (hz < 500000) {
        new_frequency = NRF_SPIM_FREQ_250K;
    } else if (hz < 1000000) {
        new_frequency = NRF_SPIM_FREQ_500K;
    } else if (hz < 2000000) {
        new_frequency = NRF_SPIM_FREQ_1M;
    } else if (hz < 4000000) {
        new_frequency = NRF_SPIM_FREQ_2M;
    } else if (hz < 8000000) {
        new_frequency = NRF_SPIM_FREQ_4M;
    } else if (hz < 16000000) {
        new_frequency = NRF_SPIM_FREQ_8M;
    } else if (hz < 32000000) {
        new_frequency = NRF_SPIM_FREQ_16M;
    } else {
        new_frequency = NRF_SPIM_FREQ_32M;
    }
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    nrf_spi_frequency_t new_frequency = NRF_SPI_FREQ_1M;

    /* Convert frequency to Nordic enum type. */
    if (hz < 250000) {
        new_frequency = NRF_SPI_FREQ_125K;
    } else if (hz < 500000) {
        new_frequency = NRF_SPI_FREQ_250K;
    } else if (hz < 1000000) {
        new_frequency = NRF_SPI_FREQ_500K;
    } else if (hz < 2000000) {
        new_frequency = NRF_SPI_FREQ_1M;
    } else if (hz < 4000000) {
        new_frequency = NRF_SPI_FREQ_2M;
    } else if (hz < 8000000) {
        new_frequency = NRF_SPI_FREQ_4M;
    } else {
        new_frequency = NRF_SPI_FREQ_8M;
    }
#endif
    /* Check if configuration has changed. */
    if (spi_inst->config.frequency != new_frequency) {
        spi_inst->config.frequency = new_frequency;

        /* Set flag to force update. */
        spi_inst->update = true;
    }
}

int spi_master_write(spi_t *obj, int value)
{
    nrfx_err_t ret;

#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int instance = spi_inst->instance;

    /* Local variables used in transfer. */
    const uint8_t tx_buff = (uint8_t) value;
    uint8_t rx_buff;

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    /* Manually clear chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_clear(spi_inst->cs);
    }

    /* Transfer 1 byte. */
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
   nrfx_spim_xfer_desc_t desc = NRFX_SPIM_XFER_TRX(&tx_buff, 1, &rx_buff, 1);
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
   nrfx_spi_xfer_desc_t desc = NRFX_SPI_XFER_TRX(&tx_buff, 1, &rx_buff, 1);
#endif

#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    ret = nrfx_spim_xfer(&nordic_nrf5_spim_instance[instance], &desc, 0);
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    ret = nrfx_spi_xfer(&nordic_nrf5_spi_instance[instance], &desc, 0);
#endif

    if (ret != NRFX_SUCCESS) {
        DEBUG_PRINTF("%d error returned from nrf_spi_xfer\n\r", ret);
    }

    /* Manually set chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_set(spi_inst->cs);
    }

    return rx_buff;
}

bool spi_master_transfer(spi_t *obj,
                         const void *tx,
                         size_t tx_length,
                         void *rx,
                         size_t rx_length,
                         uint8_t bit_width,
                         uint32_t handler,
                         uint32_t mask,
                         DMAUsage hint)
{
    /* SPI peripheral only supports 8 bit transfers. */
    MBED_ASSERT(bit_width == 8);

    /* Setup buffers for transfer. */
    struct buffer_s *buffer_pointer;

    buffer_pointer = &obj->tx_buff;
    buffer_pointer->buffer = (void *) tx;
    buffer_pointer->length = tx_length;
    buffer_pointer->pos    = 0;
    buffer_pointer->width  = 8;

    buffer_pointer = &obj->rx_buff;
    buffer_pointer->buffer = rx;
    buffer_pointer->length = rx_length;
    buffer_pointer->pos    = 0;
    buffer_pointer->width  = 8;

    /* Save event handler and event mask so they can be called from interrupt handler. */
    struct spi_s *spi_inst = &obj->spi;
    spi_inst->handler = handler;
    spi_inst->mask = mask;

    /* Clear event flag. */
    spi_inst->event = 0;

    /* Force reconfiguration. */
    spi_inst->update = true;

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    /* Manually clear chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_clear(spi_inst->cs);
    }

    /* Initiate SPI transfer. */
    ret_code_t result = spi_master_transfer_async_continue(obj);

    /* Signal error if event mask matches and event handler is set. */
    if ((result != NRFX_SUCCESS) && (mask & SPI_EVENT_ERROR) && handler) {

        /* Cast handler to callback function pointer. */
        void (*callback)(void) = (void (*)(void)) handler;

        /* Reset object. */
        spi_inst->handler = 0;
        spi_inst->update = true;

        /* Store event value so it can be read back. */
        spi_inst->event = SPI_EVENT_ERROR;

        /* Signal callback handler. */
        callback();
    }

#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    return true; // We always use DMA when the SPIM preripheral is available
#else
    return false; // We always use interrupts when the SPI peripheral is available
#endif
}

void spi_abort_asynch(spi_t *obj)
{
    int instance = obj->spi.instance;

    /* Abort transfer. */
#if NRFX_CHECK(NRFX_SPIM_ENABLED)
    nrfx_spim_abort(&nordic_nrf5_spim_instance[instance]);
#elif NRFX_CHECK(NRFX_SPI_ENABLED)
    nrfx_spi_abort(&nordic_nrf5_spi_instance[instance]);
#endif
    /* Force reconfiguration. */
    object_owner_spi2c_set(instance, NULL);
}
